--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 gym==0.22.0
 opencv-python==4.6.0.66
 opencv-contrib-python==4.6.0.66
-numpy==1.22.4
-vision_v0==0.6.6
-vision_v1==0.6.6
+numpy
+shapely == 1.8.5
+scipy
